--- a/webapp/scss/_mainForm.scss
+++ b/webapp/scss/_mainForm.scss
@@ -3,9 +3,15 @@ $scrollTime: 0.5s;
 $fadeInTime: 0.5s;
 
 body {
-	font-family: "Andale Mono", AndaleMono, monospace;
+	//font-family: "Andale Mono", AndaleMono, monospace;
+	font-family: 'Montserrat', sans-serif;
 	color: $primaryTextColor;
-	//font-size: 16px;
+	font-size: 18px;
+
+	background-image: url('../images/bg_galaxis.png');
+	background-color: black;
+	background-size: 100% auto;
+	background-repeat: no-repeat;
 }
 
 .full-height {
@@ -36,6 +42,7 @@ body {
 	}
 
 	input {
+		background: transparent;
 		color: $answerTextColor;
 		border: none;
 		border-bottom: 1px solid $answerTextColor;
