--- a/webapp/css/screen.css
+++ b/webapp/css/screen.css
@@ -46,19 +46,6 @@ body {
     left: -20px;
     top: 0px; }
 
-.recording-button {
-  background: transparent;
-  border: none;
-  outline: none;
-  position: absolute;
-  top: 10px;
-  left: 10px; }
-  .recording-button.recording {
-    color: red; }
-  @media (min-width: 768px) {
-    .recording-button {
-      left: 25%; } }
-
 #tag-cloud {
   display: none;
   position: absolute;
@@ -92,5 +79,39 @@ body {
     #image-logo {
       top: 50px;
       right: 70px; } }
+
+#microphone-section {
+  position: absolute;
+  bottom: 100px;
+  left: 50%;
+  transform: translateX(-50%); }
+
+.recording-button {
+  background: transparent;
+  outline: none;
+  border: 1px solid white;
+  border-radius: 50%;
+  width: 75px;
+  height: 75px;
+  margin-bottom: 5px; }
+  .recording-button i {
+    position: relative;
+    bottom: 4px; }
+  .recording-button.recording {
+    color: red;
+    border: 1px solid red; }
+  @media (min-width: 768px) {
+    .recording-button {
+      position: relative;
+      left: 50%;
+      transform: translateX(-50%); } }
+
+#credits {
+  position: absolute;
+  bottom: 20px;
+  left: 70px;
+  font-size: 14px; }
+  #credits .made-by {
+    color: #777; }
 
 /*# sourceMappingURL=screen.css.map */
