--- a/webapp/scss/_mainForm.scss
+++ b/webapp/scss/_mainForm.scss
@@ -75,26 +75,6 @@ body {
 }
 
 
-.recording-button {
-	background: transparent;
-	border: none;
-	outline: none;
-
-	position: absolute;
-	top: 10px;
-	left: 10px;
-
-	&.recording {
-		color: red;
-	}
-
-	@media(min-width: $screen-sm-min) {
-		left: 25%;
-	}
-}
-
-
-
 #tag-cloud {
 	display: none;
 	position: absolute;
@@ -134,5 +114,56 @@ body {
 	@media(min-width: $screen-sm-min) {
 		top: 50px;
 		right: 70px;
+	}
+}
+
+#microphone-section {
+	position: absolute;
+	bottom: 100px;
+	left: 50%;
+	transform: translateX(-50%);
+}
+
+
+.recording-button {
+	background: transparent;
+	outline: none;
+
+	border: 1px solid white;
+    border-radius: 50%;
+    width: 75px;
+    height: 75px;
+    margin-bottom: 5px;
+
+	// position: absolute;
+	// top: 10px;
+	// left: 10px;
+
+	i {
+		position: relative;
+		bottom: 4px;
+	}
+
+	&.recording {
+		color: red;
+		border: 1px solid red;
+	}
+
+	@media(min-width: $screen-sm-min) {
+		position: relative;
+		left: 50%;
+		transform: translateX(-50%);
+	}
+}
+
+
+#credits {
+	position: absolute;
+	bottom: 20px;
+	left: 70px;
+	font-size: 14px;
+
+	.made-by {
+		color: #777;
 	}
 }
