--- a/webapp/css/screen.css
+++ b/webapp/css/screen.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Montserrat', sans-serif;
+  font-weight: 300;
   color: white;
   font-size: 18px;
   background-image: url("../images/bg_galaxis.png");
@@ -29,9 +30,9 @@ body {
     position: relative; }
   .form-entry input {
     background: transparent;
-    color: white;
+    color: #F4D272;
     border: none;
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid #F4D272;
     outline: none;
     width: 100%; }
   .form-entry.new-entry {
@@ -45,6 +46,8 @@ body {
     position: absolute;
     left: -20px;
     top: 0px; }
+  .form-entry .input-field:before {
+    color: #F4D272; }
 
 #tag-cloud {
   display: none;
@@ -93,7 +96,9 @@ body {
   border-radius: 50%;
   width: 75px;
   height: 75px;
-  margin-bottom: 5px; }
+  margin-bottom: 10px; }
+  .recording-button .microphone-label {
+    font-size: 16px; }
   .recording-button i {
     position: relative;
     bottom: 4px; }
